force-app/main/default/objects/BulkProcessLog__c/BulkProcessLog__c.object-meta.xml
<CustomObject>
    <label>一括処理ログ</label>
    <nameField>
        <displayFormat>BPL-{0000000000}</displayFormat>
        <label>一括処理ログ#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>