force-app/main/default/objects/BulkProcessLog__c/fields/DispatchDetail__c.field-meta.xml
<CustomField>
    <fullName>DispatchDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配車明細</label>
    <referenceTo>DispatchDetail__c</referenceTo>
    <relationshipLabel>一括処理ログ</relationshipLabel>
    <relationshipName>DispatchDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>