force-app/main/default/objects/BulkProcessLog__c/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>一括処理ログ</relationshipLabel>
    <relationshipName>BulkProcessLogList</relationshipName>
    <type>Lookup</type>
</CustomField>