force-app/main/default/objects/BulkProcessLog__c/fields/ProcessDetails__c.field-meta.xml
<CustomField>
    <fullName>ProcessDetails__c</fullName>
    <label>処理内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>