force-app/main/default/objects/BulkProcessLog__c/fields/ProcessLog__c.field-meta.xml
<CustomField>
    <fullName>ProcessLog__c</fullName>
    <label>処理ログ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>