force-app/main/default/objects/BulkProcessLog__c/fields/ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessStatus__c</fullName>
    <label>処理状態</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <label>処理開始</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>処理中</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>正常終了</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>異常終了</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>