force-app/main/default/objects/BulkProcessLog__c/fields/ProcessSubject__c.field-meta.xml
<CustomField>
    <fullName>ProcessSubject__c</fullName>
    <label>処理件名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>