force-app/main/default/objects/BulkProcessLog__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>処理分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoGenWeeklyOffSchedule</fullName>
                <label>定休日勤務情報の自動生成</label>
            </value>
            <value>
                <fullName>UpsertScheduleByChangeWeeklyOff</fullName>
                <label>定休日変更時勤務情報変動</label>
            </value>
            <value>
                <fullName>CreateOrderFromRegularServiceBatch</fullName>
                <label>定期便注文作成バッチ</label>
            </value>
            <value>
                <fullName>RecordManualUpdate</fullName>
                <label>レコードの手動更新</label>
            </value>
            <value>
                <fullName>ImportFujiechoFareDetail</fullName>
                <label>富士エコー運賃明細インポート</label>
            </value>
            <value>
                <fullName>CreateShippingSalesReportBatch</fullName>
                <label>運賃売上日報作成バッチ</label>
            </value>
            <value>
                <fullName>StorageFeeAccountingDetailCreateBatch</fullName>
                <label>保管料の請求・支払明細作成のバッチ</label>
            </value>
            <value>
                <fullName>ImportTumixAttendance</fullName>
                <label>TUMIX出勤実績インポート</label>
            </value>
            <value>
                <fullName>OrderHeaderRelatedRecordsRollback</fullName>
                <label>注文の関連レコードのロールバック</label>
            </value>
            <value>
                <fullName>ShippingSalesReportOutputCtrl</fullName>
                <label>運送売上実績表PDF出力</label>
            </value>
            <value>
                <fullName>ShippedScheduleBatch</fullName>
            </value>
            <value>
                <fullName>ArrivedScheduleBatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>