force-app/main/default/objects/BulkProcessLog__c/fields/ToEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>ToEmailAddresses__c</fullName>
    <label>送信先</label>
    <type>Email</type>
</CustomField>