force-app/main/default/objects/BulkProcessLog__c/fields/ToEmailGroupAddresses__c.field-meta.xml
<CustomField>
    <fullName>ToEmailGroupAddresses__c</fullName>
    <label>送信先の課</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrderGroup</fullName>
                <label>受注課</label>
            </value>
            <value>
                <fullName>DispatchGroup</fullName>
                <label>配車課</label>
            </value>
            <value>
                <fullName>SystemGroup</fullName>
                <label>システム課</label>
            </value>
            <value>
                <fullName>AccountingGroup</fullName>
                <label>経理課</label>
            </value>
            <value>
                <fullName>WarehouseGroup</fullName>
                <label>倉庫課</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>