force-app/main/default/objects/BulkProcessLog__c/fields/TransportationExpenseDetail__c.field-meta.xml
<CustomField>
    <fullName>TransportationExpenseDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>運送経費明細</label>
    <referenceTo>TransportationExpenseDetail__c</referenceTo>
    <relationshipLabel>一括処理ログ</relationshipLabel>
    <relationshipName>BulkProcessLogList</relationshipName>
    <type>Lookup</type>
</CustomField>